[package]
name = "rust"
version = "0.1.0"
authors = ["shelllet <shelllet@gmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.1"
clap = "2.33.0"
winreg = "0.6.2"
cpp = "0.5.4"
xml-rs = "0.8.0"
winapi = "0.3.8"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.7.1"
[build-dependencies]
cpp_build = "0.5"
